[package]
name = "datamorph"
license = "MIT"
description = "Utilit CLI for transfering CSV to JSON"
homepage = "https://github.com/JustinR93/datamorph"
documentation = "https://github.com/JustinR93/datamorph"
repository = "https://github.com/JustinR93/datamorph"
version = "1.0.1"
authors = ["Justin Rhoades <jrhoades93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
json = "0.12.0"
clap = "~2.33"
indicatif = "0.12.0"
slog = "2.5.2"
slog-term = "2.4.1"
